deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glue-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glue-database
  template:
    metadata:
      labels:
        app: glue-database
    spec:
      containers:
      - name: glue-database
        image:  vijay165/glue_database
        ports:
        - containerPort: 80
