service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glue-database-service
spec:
  selector:
    app: glue-database
  ports:
    - name: http
      protocol: TCP
      port: 8000
