ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glue-app
spec:
  rules:
    -  http:
        paths:
        - path: /database
          pathType: Prefix
          backend:
            service:
              name: glue-database-service
              port:
                name: http
---
